--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Calculadora con javascript</title>
+    <title>Evaluar Edad</title>
     <link type="text/css" href="estilo.css" rel="stylesheet">
 </head>
 
 <body onload="init();">
     <div>
-        <span class="instrucciones">Indique su edad actual:</span>
+        <span class="instrucciones">Por favor indique su edad actual:</span>
         <br><input type="text" id="edad"> <button id="evaluar">Evaluar Edad</button>
         <article>
             <br><br><span id="resultado"></span>
